err/jprocessing.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jNlp'...
Listing './lib/python3.5/site-packages/jNlp/data'...
Compiling './lib/python3.5/site-packages/jNlp/edict_examples.py'...
***   File "./lib/python3.5/site-packages/jNlp/edict_examples.py", line 139
    print query.encode('utf-8')
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jNlp/edict_search.py'...
***   File "./lib/python3.5/site-packages/jNlp/edict_search.py", line 196
    print info
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jNlp/jCabocha.py'...
***   File "./lib/python3.5/site-packages/jNlp/jCabocha.py", line 122
    print cabocha.xmlstring(input_sentence).encode('utf-8')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jNlp/jConvert.py'...
***   File "./lib/python3.5/site-packages/jNlp/jConvert.py", line 61
    print ' '.join(tokenizedRomaji(sent)).encode('utf-8')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jNlp/jProcessing.py'...
***   File "./lib/python3.5/site-packages/jNlp/jProcessing.py", line 35
    print long_substr(a, b)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jNlp/jTokenize.py'...
***   File "./lib/python3.5/site-packages/jNlp/jTokenize.py", line 67
    print jTokenize(a)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jNlp/jnlp'...
Listing './lib/python3.5/site-packages/jProcessing-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
